src/main/order-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    prometheus.io/scrape: "true"
    fabric8.io/scm-tag: HEAD
    prometheus.io/port: "9779"
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/order
  labels:
    expose: "true"
    app: order
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: order
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: order
    provider: fabric8
    group: com.example
