src/main/order-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: order
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: com.example
  name: order
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: order
